--- a/UWP/project.json
+++ b/UWP/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "dependencies": {
-    "Zebble": "4.1.285",
+    "Zebble": "4.1.285"
     "Zebble.ListView": "3.17.122",
     "Zebble.OptionsList": "3.14.108"
   },
@@ -16,3 +16,4 @@
     "win10-x64-aot": {}
   }
 }
+
