--- a/Android/Android.csproj
+++ b/Android/Android.csproj
@@ -15,7 +15,8 @@
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
-    <NuGetPackageImportStamp></NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,16 +44,14 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Zebble.Android, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.4.1.285\lib\MonoAndroid10\Zebble.Android.dll</HintPath>
+      <HintPath>..\packages\Zebble.4.1.286\lib\MonoAndroid10\Zebble.Android.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.ListView.Android, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.ListView.3.17.122\lib\MonoAndroid10\Zebble.ListView.Android.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\packages\Zebble.ListView.3.17.126\lib\MonoAndroid10\Zebble.ListView.Android.dll</HintPath>
     </Reference>
     <Reference Include="Zebble.OptionsList.Android, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.OptionsList.3.14.108\lib\MonoAndroid10\Zebble.OptionsList.Android.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\packages\Zebble.OptionsList.3.14.111\lib\MonoAndroid10\Zebble.OptionsList.Android.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
