--- a/UWP/project.json
+++ b/UWP/project.json
@@ -1,8 +1,8 @@
 ﻿{
   "dependencies": {
-    "Zebble": "4.1.285"
-    "Zebble.ListView": "3.17.122",
-    "Zebble.OptionsList": "3.14.108"
+    "Zebble": "4.1.286",
+    "Zebble.ListView": "3.17.126",
+    "Zebble.OptionsList": "3.14.111"
   },
   "frameworks": {
     "uap10.0": {}
@@ -16,4 +16,3 @@
     "win10-x64-aot": {}
   }
 }
-
