--- a/Android/packages.config
+++ b/Android/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
-  <package id="Zebble" version="4.1.286" targetFramework="monoandroid71" />
-  <package id="Zebble.ListView" version="3.17.126" targetFramework="monoandroid71" />
-  <package id="Zebble.OptionsList" version="3.14.111" targetFramework="monoandroid71" />
+  <package id="Zebble" version="4.1.289" targetFramework="monoandroid71" />
+  <package id="Zebble.ListView" version="3.17.127" targetFramework="monoandroid71" />
+  <package id="Zebble.OptionsList" version="3.14.112" targetFramework="monoandroid71" />
+  <package id="Zebble.SearchInput" version="3.18.261" targetFramework="monoandroid71" />
 </packages>
