--- a/iOS/iOS.csproj
+++ b/iOS/iOS.csproj
@@ -41,14 +41,17 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Zebble.iOS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.4.1.286\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.4.1.289\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.ListView.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.ListView.3.17.126\lib\Xamarin.iOS10\Zebble.ListView.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.ListView.3.17.127\lib\Xamarin.iOS10\Zebble.ListView.iOS.dll</HintPath>
     </Reference>
     <Reference Include="Zebble.OptionsList.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.OptionsList.3.14.111\lib\Xamarin.iOS10\Zebble.OptionsList.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.OptionsList.3.14.112\lib\Xamarin.iOS10\Zebble.OptionsList.iOS.dll</HintPath>
+    </Reference>
+    <Reference Include="Zebble.SearchInput.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zebble.SearchInput.3.18.261\lib\Xamarin.iOS10\Zebble.SearchInput.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
