--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
-  <package id="Zebble" version="4.1.286" targetFramework="xamarinios10" />
-  <package id="Zebble.ListView" version="3.17.126" targetFramework="xamarinios10" />
-  <package id="Zebble.OptionsList" version="3.14.111" targetFramework="xamarinios10" />
+  <package id="Zebble" version="4.1.289" targetFramework="xamarinios10" />
+  <package id="Zebble.ListView" version="3.17.127" targetFramework="xamarinios10" />
+  <package id="Zebble.OptionsList" version="3.14.112" targetFramework="xamarinios10" />
+  <package id="Zebble.SearchInput" version="3.18.261" targetFramework="xamarinios10" />
 </packages>
