--- a/Android/packages.config
+++ b/Android/packages.config
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+﻿<packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
-  <package id="Zebble" version="4.1.289" targetFramework="monoandroid71" />
+  <package id="Zebble" version="4.1.290" targetFramework="monoandroid71" />
   <package id="Zebble.ListView" version="3.17.127" targetFramework="monoandroid71" />
   <package id="Zebble.OptionsList" version="3.14.112" targetFramework="monoandroid71" />
   <package id="Zebble.SearchInput" version="3.18.261" targetFramework="monoandroid71" />
