--- a/Android/packages.config
+++ b/Android/packages.config
@@ -1,9 +1,10 @@
-﻿<packages>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.6" targetFramework="monoandroid71" />
-  <package id="Zebble" version="4.2.342" targetFramework="monoandroid71" />
+  <package id="Zebble" version="4.2.362" targetFramework="monoandroid71" />
   <package id="Zebble.CheckBox" version="1.22.109" targetFramework="monoandroid71" />
-  <package id="Zebble.ListView" version="3.17.135" targetFramework="monoandroid71" />
+  <package id="Zebble.ListView" version="3.17.139" targetFramework="monoandroid71" />
   <package id="Zebble.OptionsList" version="3.14.117" targetFramework="monoandroid71" />
   <package id="Zebble.SearchInput" version="3.18.263" targetFramework="monoandroid71" />
 </packages>
