--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,8 +1,9 @@
-﻿<packages>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
-  <package id="Zebble" version="4.2.342" targetFramework="xamarinios10" />
+  <package id="Zebble" version="4.2.362" targetFramework="xamarinios10" />
   <package id="Zebble.CheckBox" version="1.22.109" targetFramework="xamarinios10" />
-  <package id="Zebble.ListView" version="3.17.135" targetFramework="xamarinios10" />
+  <package id="Zebble.ListView" version="3.17.139" targetFramework="xamarinios10" />
   <package id="Zebble.OptionsList" version="3.14.117" targetFramework="xamarinios10" />
   <package id="Zebble.SearchInput" version="3.18.263" targetFramework="xamarinios10" />
 </packages>
