--- a/Shared/NuGet/NuGet.nuspec
+++ b/Shared/NuGet/NuGet.nuspec
@@ -6,9 +6,9 @@
     <title>Item Picker for Zebble (Xamarin)</title>
     <projectUrl>https://github.com/Geeksltd/Zebble.ItemPicker</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Geeksltd/Zebble.ItemPicker/master/Shared/NuGet/Icon.png</iconUrl>
-    <copyright>Copyright ©2017 Mobile App Technologies Ltd - All rights reserved.</copyright>
+    <copyright>Copyright ©2017 Geeks Ltd - All rights reserved.</copyright>
     <description>Allows the user to select one or more items from a pre-defined list.</description>
-    <authors>Mobile App Technologies Ltd</authors>
+    <authors>Geeks Ltd</authors>
     <dependencies>
       <dependency id="Zebble.OptionsList" version="3.14.115" />
       <dependency id="Zebble.SearchInput" version="3.18.261" />
