--- a/UWP/project.json
+++ b/UWP/project.json
@@ -1,9 +1,10 @@
 ﻿{
   "dependencies": {
-    "Zebble": "4.4.100",
-    "Zebble.ListView": "3.17.143",
-    "Zebble.OptionsList": "3.14.123",
-    "Zebble.SearchInput": "3.18.266"
+    "Zebble": "4.4.131",
+    "Zebble.CheckBox": "1.22.111",
+    "Zebble.ListView": "3.17.144",
+    "Zebble.OptionsList": "3.14.124",
+    "Zebble.SearchInput": "3.18.267"
   },
   "frameworks": {
     "uap10.0.10240": {}
