--- a/iOS/iOS.csproj
+++ b/iOS/iOS.csproj
@@ -41,19 +41,24 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Zebble.CheckBox.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.CheckBox.1.22.109\lib\Xamarin.iOS10\Zebble.CheckBox.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.CheckBox.1.22.115\lib\Xamarin.iOS10\Zebble.CheckBox.iOS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.iOS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.4.2.364\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.4.4.241\lib\Xamarin.iOS10\Zebble.iOS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.ListView.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.ListView.3.17.140\lib\Xamarin.iOS10\Zebble.ListView.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.ListView.4.10.155\lib\Xamarin.iOS10\Zebble.ListView.iOS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.OptionsList.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.OptionsList.3.14.117\lib\Xamarin.iOS10\Zebble.OptionsList.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.OptionsList.3.14.127\lib\Xamarin.iOS10\Zebble.OptionsList.iOS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Zebble.SearchInput.iOS, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Zebble.SearchInput.3.18.263\lib\Xamarin.iOS10\Zebble.SearchInput.iOS.dll</HintPath>
+      <HintPath>..\packages\Zebble.SearchInput.3.18.272\lib\Xamarin.iOS10\Zebble.SearchInput.iOS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
