--- a/Android/packages.config
+++ b/Android/packages.config
@@ -1,9 +1,10 @@
-﻿<packages>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid80" />
-  <package id="Zebble" version="4.4.185" targetFramework="monoandroid80" />
-  <package id="Zebble.CheckBox" version="1.22.111" targetFramework="monoandroid80" />
-  <package id="Zebble.ListView" version="3.17.144" targetFramework="monoandroid80" />
-  <package id="Zebble.OptionsList" version="3.14.124" targetFramework="monoandroid80" />
-  <package id="Zebble.SearchInput" version="3.18.267" targetFramework="monoandroid80" />
+  <package id="Zebble" version="4.4.241" targetFramework="monoandroid81" />
+  <package id="Zebble.CheckBox" version="1.22.115" targetFramework="monoandroid81" />
+  <package id="Zebble.ListView" version="4.10.156" targetFramework="monoandroid81" />
+  <package id="Zebble.OptionsList" version="3.14.127" targetFramework="monoandroid81" />
+  <package id="Zebble.SearchInput" version="3.18.272" targetFramework="monoandroid81" />
 </packages>
