--- a/Shared/NuGet/NuGet.nuspec
+++ b/Shared/NuGet/NuGet.nuspec
@@ -19,6 +19,10 @@
   <files>
     <file src="..\..\lib\Zebble.ItemPicker.iOS.*" target="lib\Xamarin.iOS10\" />
     <file src="..\..\lib\Zebble.ItemPicker.Android.*" target="lib\MonoAndroid10\" />
-    <file src="..\..\lib\Zebble.ItemPicker.UWP.*" target="lib\UAP10\" />
+    
+    <file src="..\..\lib\bin\ARM\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-arm\lib\uap10.0" />
+    <file src="..\..\lib\bin\x64\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-x64\lib\uap10.0" />
+    <file src="..\..\lib\bin\x86\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-x86\lib\uap10.0" />
+    <file src="..\..\lib\bin\Release\Zebble.ItemPicker.UWP.*" target="ref\uap10.0" />
   </files>
 </package>
