--- a/Shared/NuGet/NuGet.nuspec
+++ b/Shared/NuGet/NuGet.nuspec
@@ -2,11 +2,11 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Zebble.ItemPicker</id>
-    <version>3.12.163</version>
+    <version>3.12.164</version>
     <title>Item Picker for Zebble (Xamarin)</title>
     <projectUrl>https://github.com/Geeksltd/Zebble.ItemPicker</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Geeksltd/Zebble.ItemPicker/master/Shared/NuGet/Icon.png</iconUrl>
-    <copyright>Copyright © 2019 Geeks Ltd - All rights reserved.</copyright>
+    <copyright>Copyright © 2020 Geeks Ltd - All rights reserved.</copyright>
     <description>Allows the user to select one or more items from a pre-defined list.</description>
     <authors>Geeks Ltd</authors>
     <dependencies>
@@ -19,9 +19,9 @@
   <files>
     <file src="..\..\lib\Zebble.ItemPicker.iOS.*" target="lib\Xamarin.iOS10\" />
     <file src="..\..\lib\Zebble.ItemPicker.Android.*" target="lib\MonoAndroid10\" />
+    <file src="..\..\lib\Zebble.ItemPicker.UWP.*" target="lib\UAP10.0" />
     <file src="..\..\lib\bin\ARM\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-arm\lib\uap10.0" />
     <file src="..\..\lib\bin\x64\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-x64\lib\uap10.0" />
     <file src="..\..\lib\bin\x86\Release\Zebble.ItemPicker.UWP.*" target="runtimes\win10-x86\lib\uap10.0" />
-    <file src="..\..\lib\bin\Release\Zebble.ItemPicker.UWP.*" target="ref\uap10.0" />
   </files>
 </package>
